// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPlatformsCard expect to render 1`] = `
<ReportCard
  skipBullseye={true}
  title={
    <span>
      <span>
        Application server platform information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
>
  <Grid
    hasGutter={true}
    xl={6}
  >
    <GridItem>
      <Bullseye>
        <FancyChartDonut
          chartProps={
            Object {
              "subTitle": "Total",
              "title": "45",
            }
          }
          data={
            Array [
              Object {
                "extraData": 10,
                "label": "Application1",
                "value": 0.2222222222222222,
              },
              Object {
                "extraData": 20,
                "label": "Application2",
                "value": 0.4444444444444444,
              },
              Object {
                "extraData": 15,
                "label": "Application2",
                "value": 0.3333333333333333,
              },
            ]
          }
          tickFormat={[Function]}
          tooltipFormat={[Function]}
        />
      </Bullseye>
    </GridItem>
    <GridItem>
      <Bullseye>
        <SolidCard
          title="Application server environments that can be replatformed with JBoss EAP: 1"
          width={510}
        />
      </Bullseye>
    </GridItem>
  </Grid>
</ReportCard>
`;

exports[`ApplicationPlatformsCard expect to render empty card when no java runtimes 1`] = `
<Component
  cardTitle={
    <span>
      <span>
        Application server platform information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
  description="No application server platforms have been discovered."
  message="No application server platforms found"
/>
`;

exports[`ApplicationPlatformsCard expect to render empty card when undefined reportWorkloadSummary 1`] = `
<Component
  cardTitle={
    <span>
      <span>
        Application server platform information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
  description="No application server platforms have been discovered."
  message="No application server platforms found"
/>
`;
